--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <div class="heading text-center my-5">
+                    <div class="heading text-center my-5 text-warning">
                         <h2>You can switch on/off the light bulb.</h2>
                     </div>
                 </div>
@@ -28,9 +28,17 @@
             <div class="row">
                 <div class="col-12">
 
-                <div class="buttons text-center my-4">
-                    <button class="btn btn-danger mx-3" onclick="document.getElementById('bulb').src='on.png' ">Turn On</button>
-                    <button class="btn btn-danger mx-3" onclick="document.getElementById('bulb').src='off.png' ">Turn Off</button>
+                     <div class="buttons text-center my-4">
+                        <button class="btn btn-danger mx-3" onclick="document.getElementById('bulb').src='on.png' ">Turn On</button>
+                        <button class="btn btn-danger mx-3" onclick="document.getElementById('bulb').src='off.png' ">Turn Off</button>
+                     </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12">
+                    <div class="myinfo text-center text-warning">
+                        <p>Created By : Harshit Chaurasia</p>
+                    </div>
                 </div>
             </div>
             </div>
